--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:            Let's Talk about Philosophy!
 tagline:          A Cup of Figures
 description: "Reader, you have been warned! This definitly is not a blog. This is where I keep an extended version of my notes and writing. Do not attempt to find any meaning or purpose in my writing. You will fail miserably."
 # An awesome quote for your website
-quote:  "Cringe. Now bad poetry."
+quote: "Philosophy, if it cannot answer so many questions as we could wish, has at least the power of asking questions which increase the interest of the world, and show the strangeness and wonder lying just below the surface even in the commonest things of daily life. - Bertrand Russel"
 canonical: espresso-math.github.io
 #Comment out the below line when pushing to gh-pages
 #url: http://10.42.0.1/_site 
@@ -12,7 +12,7 @@ canonical: espresso-math.github.io
 
 # Owner/author information
 owner:
-  name:           Adrian Glitch
+  name:           Sahit Chintalapudi
   avatar:         avatar.jpg
   bio:            
   email:          adrianglitch.auth@gmail.com
